# ksyup

./: .env  Cargo.toml  README.md  demo.sql
public/: index.html
src/: config.rs  errors.rs  lib.rs  main.rs  routes.rs
src/api/: mod.rs
src/handlers/: errors.rs  mod.rs  users.rs  web.rs
src/middlewares/: auth.rs  request_id.rs  timer.rs
src/model/: mod.rs
src/models/: user.rs
src/repositories/: user.rs
