[package]
name = "ksyup"
version = "0.1.0"
authors = ["krircc <krircc@qq.com>"]
edition = "2018"

[dependencies]
ntex = "0.3"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "macros", "postgres", "chrono", "json" ] }
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras.git" }
chrono = { version = "0.4", features = ["serde"]}
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
futures = "0.3"