[package]
name = "ksyup"
version = "0.1.0"
authors = ["krircc <krircc@qq.com>"]
description = "The Ksyup web project."
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "ksyup"
path = "src/main.rs"

[dependencies]
ntex = "0.3"
ntex-files = { git = "https://github.com/ntex-rs/ntex-extras.git" }
chrono = { version = "0.4", features = ["serde"]}
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5.6"
mime = "0.3"
color-eyre = "0.5.10"
config = "0.10"
derive_more = "0.99.11"
env_logger = "0.7"
eyre = "0.6.3"
futures = "0.3"
jsonwebtoken = "7.2.0"
log = "0.4.11"
reqwest = "0.10.8"
sha2 = "0.9"
sqlx = { version = "0.5", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "json"] }
uuid = { version = "0.8", features = ["serde", "v4"] }